@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -40,12 +40,6 @@
  */
 package com.oracle.truffle.tck.tests;
 
-import java.util.AbstractMap;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Objects;
-import java.util.function.Function;
-
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.Value;
 import org.graalvm.polyglot.tck.LanguageProvider;
@@ -56,6 +50,11 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
+
+import java.util.AbstractMap;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 
 @RunWith(Parameterized.class)
 public class IdentityFunctionTest {
@@ -70,18 +69,8 @@ public class IdentityFunctionTest {
         final Collection<? extends TestRun> testRuns = TestUtil.createTestRuns(
                         TestUtil.getRequiredLanguages(context),
                         TestUtil.getRequiredValueLanguages(context),
-                        new Function<String, Collection<? extends Snippet>>() {
-                            @Override
-                            public Collection<? extends Snippet> apply(String lang) {
-                                return Arrays.asList(createIdentitySnippet(lang));
-                            }
-                        },
-                        new Function<String, Collection<? extends Snippet>>() {
-                            @Override
-                            public Collection<? extends Snippet> apply(String lang) {
-                                return context.getValueConstructors(null, lang);
-                            }
-                        });
+                        lang -> List.of(createIdentitySnippet(lang)),
+                        lang -> context.getValueConstructors(null, lang));
         if (testRuns.isEmpty()) {
             // BeforeClass and AfterClass annotated methods are not called when there are no tests
             // to run. But we need to free TestContext.
@@ -116,12 +105,18 @@ public class IdentityFunctionTest {
         Assume.assumeThat(testRun, TEST_RESULT_MATCHER);
         boolean success = false;
         try {
+            Value result = null;
             try {
-                final Value result = testRun.getSnippet().getExecutableValue().execute(testRun.getActualParameters().toArray());
-                TestUtil.validateResult(testRun, result, null, true);
+                result = testRun.getSnippet().getExecutableValue().execute(testRun.getActualParameters().toArray());
+            } catch (IllegalArgumentException e) {
+                TestUtil.validateResult(testRun, context.getContext().asValue(e).as(PolyglotException.class));
                 success = true;
-            } catch (PolyglotException pe) {
-                TestUtil.validateResult(testRun, null, pe, true);
+            } catch (PolyglotException e) {
+                TestUtil.validateResult(testRun, e);
+                success = true;
+            }
+            if (result != null) {
+                TestUtil.validateResult(testRun, result, true);
                 success = true;
             }
         } catch (PolyglotException | AssertionError e) {
